--- a/ImageAnalyzerApp/ImageAnalyzerApp/ImageAnalyzerApp.csproj
+++ b/ImageAnalyzerApp/ImageAnalyzerApp/ImageAnalyzerApp.csproj
@@ -52,10 +52,20 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormImageView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormImageView.Designer.cs">
+      <DependentUpon>FormImageView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormImageView.resx">
+      <DependentUpon>FormImageView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
