--- a/ImageAnalyzerApp/ImageAnalyzerApp/ImageAnalyzerApp.csproj
+++ b/ImageAnalyzerApp/ImageAnalyzerApp/ImageAnalyzerApp.csproj
@@ -58,6 +58,12 @@
     <Compile Include="FormImageView.Designer.cs">
       <DependentUpon>FormImageView.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormTypeEdit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormTypeEdit.Designer.cs">
+      <DependentUpon>FormTypeEdit.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util.cs" />
@@ -66,6 +72,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormImageView.resx">
       <DependentUpon>FormImageView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormTypeEdit.resx">
+      <DependentUpon>FormTypeEdit.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
