--- a/ImageAnalyzerApp/ImageAnalyzerApp/ImageAnalyzerApp.csproj
+++ b/ImageAnalyzerApp/ImageAnalyzerApp/ImageAnalyzerApp.csproj
@@ -59,6 +59,12 @@
     <Compile Include="FormImageView.Designer.cs">
       <DependentUpon>FormImageView.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormSubViewEdit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormSubViewEdit.Designer.cs">
+      <DependentUpon>FormSubViewEdit.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormTypeEdit.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -73,6 +79,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormImageView.resx">
       <DependentUpon>FormImageView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormSubViewEdit.resx">
+      <DependentUpon>FormSubViewEdit.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormTypeEdit.resx">
       <DependentUpon>FormTypeEdit.cs</DependentUpon>
